<resources>
    <string name="app_name">Elderly Care System</string>
    <string name="navigation_draw_open">open navigation drawer</string>
    <string name="navigation_draw_close">close navigation drawer</string>
    <string name="get_active">
    \t\t\tPhysical activity is an immune system booster. The more you move, the more your body is able to fight inflammation and infections.

    \n\n\t\t\tThe activity you partake in doesn’t have to be strenuous. Low impact exercises are effective, too.

    \n\n\t\t\tYou might consider biking, walking, swimming, or low impact aerobics. If you’re able to, engage in moderate intensity exercise for about 20 to 30 minutes a day to reach the recommended total of 150 minutes a weekTrusted Source. Also, strengthen your muscles by lifting weights or doing yoga.

    \n\n\t\t\tModify your exercise routine to find what feels best for you.</string>
    <string name="take_supplements">
        \t\t\tSome supplements help support a healthy immune system. Before taking a supplement, always ask your doctor if it’s safe, especially if you’re taking a prescription medication. Some supplements they may recommend include calcium, vitamin D, vitamin B6, or vitamin B12.
    </string>
    <string name="healthy_diet">
        \t\t\tDiets rich in fruits, vegetables, and lean meats also give your immune system a boost and protect against harmful viruses and bacteria that cause illnesses. Fruits and vegetables are a good source of antioxidants. Antioxidants protect your cells from damage and keep your body healthy.

    \n\n\t\t\tYou should also limit your consumption of sugary and fatty foods, which can trigger inflammation in the body and lower your immune system.
    </string>
    <string name="wash_hands">
        \t\t\tWashing your hands on a regular basis is another excellent way to stay healthy year-round. Viruses can live on surfaces for up to 24 hours. It’s possible to become ill if you touch a virus-covered surface and contaminate your hands, and then touch your face.

    \n\n\t\t\tWash your hands with warm soapy water often, and for at least 20 seconds. Avoid touching your nose, face, and mouth with your hands.
    </string>
    <string name="take_rest">
        \t\t\tNot only can sleep reduce your stress level, but sleep is how your body repairs itself. For this reason, getting an adequate amount of sleep can result in a stronger immune system, making it easier for your body to fight off viruses.

    \n\n\t\t\tSleep is also important as you get older because it can improve memory and concentration. Aim for at least seven and a half to nine hours of sleep per night.

    \n\n\t\t\tIf you have trouble sleeping, talk to your doctor to find the underlying cause. Causes of insomnia can include inactivity during the day and too much caffeine. Or it can be a sign of a medical condition like sleep apnea or restless leg syndrome.
    </string>
    <string name="bal_diet">
        \t\t\tEating a well-balanced diet is an important part of staying healthy as you age. It can help you maintain a healthy weight, stay energized, and get the nutrients you need. It also lowers your risk of developing chronic health conditions, such as heart disease and diabetes.
    </string>
    <string name="bal_diet_text">
As you get older, your nutritional needs, appetite, and food habits can change in several ways.\n\n

        <b><u>Calories</u></b>
\n\n\t\t\tYou’ll probably need fewer calories as you age to maintain a healthy weight. Eating more calories than you burn leads to weight gain.

\n\n\t\t\tYou may find you have less energy and more muscle or joint problems as you get older. As a result, you may become less mobile and burn fewer calories through physical activity. You may also lose muscle mass. This causes your metabolism to slow down, lowering your caloric needs.

        \n\n\n<b><u>Appetite</u></b>
\n\n\t\t\tMany people experience a loss of appetite with age. It’s also common for your sense of taste and smell to diminish. This can lead you to eat less.

\n\n\t\t\tIf you’re burning fewer calories through physical activity, eating less may not be a problem. However, you need to get enough calories and nutrients to maintain healthy organs, muscles, and bones. Not getting enough can lead to malnutrition and health problems.

        \n\n\n<b><u>Medical Conditions</u></b>
\n\n\t\t\tAs you age, you become more susceptible to chronic health problems, such as diabetes, high blood pressure, high cholesterol, and osteoporosis. To help prevent or treat these conditions, your doctor may recommend changes to your diet.

\n\n\t\t\tFor example, if you’ve been diagnosed with diabetes, high blood pressure, or high cholesterol, you should eat foods that are rich in nutrients, but low in excess calories, processed sugars, and saturated and trans fats. Your doctor may also advise you to eat less sodium.

\n\n\t\t\tSome older adults become sensitive to foods such as onions, peppers, dairy products, and spicy foods. You may need to cut some of these foods out of your diet.

        \n\n\n<b><u>Medications</u></b>
\n\n\t\t\tYou may need to take medications to manage chronic health conditions. Some medications can affect your appetite. Some can also interact with certain foods and nutritional supplements.

\n\n\t\t\tFor example, if you’re taking warfarin (Coumadin), you need to avoid grapefruit. It decreases your body’s ability to metabolize the drug. You also need to maintain a steady level of vitamin K in your diet. You can get vitamin K from eating plenty of spinach, kale, or other leafy greens.

\n\n\t\t\tIf you’re taking a medication, be sure to check with your doctor or pharmacist to find out whether you need to make any changes to your diet.

    \n\n\n<b><u>Oral Health</u></b>
\n\n\t\t\tSeniors have their own set of oral health concerns. Some of these can interfere with your ability to eat. For example, dentures that don’t fit properly may lead to poor eating habits and malnutrition. Infections in your mouth can also cause problems.

    \n\n\n<b><u>Immune System</u></b>
\n\n\t\t\tYour immune system weakens with age. This raises your risk of food-borne illness, or food poisoning.

\n\n\t\t\tProper food safety techniques are important at every age. However, you may need to take extra precautions as your immune system weakens. For example, your doctor may recommend avoiding foods with raw eggs, such as homemade mayonnaise or Caesar salad dressing.


    </string>
    <string name="YandT">
        \t\t\tOur biology changes as we get older, causing seniors to have different reasons for staying in shape than younger generations. Though physical fitness provides benefits at any age, the health perks physically fit seniors enjoy are more notable. Physicians and researchers say seniors should remain as active as possible, without overexerting one’s self. In older adults, exercise helps you live a longer, healthier, and more joyous life.
    </string>
    <string name="chair_yoga">
        \t\t\tLike water aerobics, chair yoga is a low-impact form of exercise that improves muscle strength, mobility, balance and flexibility, all of which are crucial health aspects for seniors. Chair yoga is an accessible form of yoga that provides less stress on muscles, joints, and bones than more conventional forms of yoga.

    \n\n\t\t\tAs an added bonus, chair yoga has been shown to improve mental health in older adults. Regular chair yoga participants have better quality sleep, lower instances of depression, and report a general sense of well-being.
        \n\nGreat chair yoga exercises for seniors include:
        \n1] Overhead stretch \n2] Seated cow stretch \n3] Seated cat stretch \n 4] Seated mountain pose \n5] Seated twist
    </string>
    <string name="rBand">
        \t\t\tResistance bands are stretchy strips of rubber that add resistance to workouts with reduced stress on your body. Resistance band workouts are user-friendly, and accessible for beginners. This form of exercise is growing more popular among seniors because of the relatively cheap up-front costs of materials, which makes resistance band workouts ideal for at-home exercise. Additionally, these exercises are ideal for strengthening your core, which improves posture, mobility, and balance.

        \n\nResistance band workouts for seniors include:
        \n1] Leg press \n2] Triceps press \n3] Lateral raise \n 4] Bicep curl \n5] Band pull apart
    </string>
    <string name="walking">
        \t\t\tOne of the least stressful and accessible forms of exercise is walking. For some seniors, walking is a bigger challenge than others, so distance and step goals differ from person to person. For the general population, <b>10,000 steps per day</b> is advised for a healthy lifestyle, but those with difficulty walking or joint pain may settle for a smaller number as a goal. A PLOS One study found that walking 10,000 steps lowered the ten-year outlook for mortality by 46%. Walking promotes a healthy lifestyle, while strengthening muscles, <b>lowering your risk of heart disease, stroke, diabetes, and colon cancer.</b>
        \n\nIdeas for walking exercises for seniors:
        \n1] Find a moderate trail through a park \n2] Find a walk-friendly race to train for \n3] Walk the perimeter of a familiar building
        \n 4] Find an audiobook or a playlist for stimulation during your walk
    </string>
    <string name="tadasana">
        \t\t\tProbably the most simple yet helpful for the nervous system, Tadasana is the most sought after yoga exercise to boost immunity. It improves body posture and creates flexibility in the thighs and joints. Apart from being the best yoga poses to boost the immune system, it also helps to tone the abdomen and body muscles.
        \n\n<b>Here is how to do:</b>
        \nStand on your yoga mat, and place your feet slightly apart from each other.
        \nHands in perfect alignment with your body.
        \nInhale deeply, and slowly raise the arms upward then interlock the fingers.
        \nLift your heels and stand on the toes.
        \nStretch your body while looking in an upward direction.
        \nPlace your body weight on the toes and strength the rest of the body up.
        \nHold this pose for few seconds.
        \nExhale and return to the initial stage.
    </string>
    <string name="anulom_vilom">
        \t\t\tIn this sedentary lifestyle, people are getting frustrated just because of the fast life. So everyone needs to find some time to invest in making their health better because health is wealth. There are numerous health techniques that you can opt to keep your self healthy. But the most effective and preferred method is Anulom Vilom Pranayama. Scratching your mind thinking about the word Anulom Vilom? Its a popular breathing exercise which is also known as traditional yoga, people usually do to calm the mind and body.
        \n\n\t\t\t‘Anulom’ translates as with the grain and ‘Vilom’ means ‘against the grain’. These are the best exercises that everyone must do to keep themselves healthy and calm. Anulom Vilom is basically deep breath inhalation and exhalation while alternating between the right and left nostril with the help of using fingers.
    </string>
    <string name="infection_prevention">
        \t\t\tHome care has many benefits for the patient and their family members. Seniors have the company of the people they love and spend their days surrounded by familiar objects. The family can monitor the care of their loved one and have more time to spend with them.

        \n\t\t\tMany family members take on the role of caregiver without any prior medical experience. The lack of training can cause some concerns. Infection control is one of the most serious issues everyone should learn about when they have an elderly family member convalescing at home.
    </string>
</resources>