<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Basic_Tips"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:elevation="5dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/headerColor"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/customerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="back"
                android:drawableLeft="@drawable/ic_back"
                android:text="  Basic Tips"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1. Get active"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_active"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2. Take supplements as necessary"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/black"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_supplements"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3. Eat a healthy diet"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/black"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/healthy_diet"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4. Wash your hands frequently"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/black"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wash_hands"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5. Get plenty of rest"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/black"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_rest"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/black"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>