<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Yoga_Exercise"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:elevation="5dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/headerColor"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/customerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="back"
                android:drawableLeft="@drawable/ic_back"
                android:text="  Yoga &amp; Exercises"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="The Health Benefits of Exercise in Older Adults"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:textSize="17dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/YandT"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1. Chair yoga"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:textSize="16dp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/chair_yoga"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chair_yoga"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2. Resistance band workouts"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:textSize="16dp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/r_band"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rBand"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="3. Walking"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:textSize="16dp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/walking"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/walking"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="4. Tadasana"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:textSize="16dp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/tadasana"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tadasana"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="5. Anulom Vilom Pranayama"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:textSize="16dp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/anulom_vilom"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anulom_vilom"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>